@@ -35,12 +35,16 @@
     <!-- <color id="canal_lock/canal lock color"   rgba="0xd1cd0cFF"/>-->
     <!-- <color id="canal_lock/canal lock color h" rgba="0xf1ed1cFF"/>-->
     <!-- <color id="canal_lock/ground color"       rgba="0x9b5f5aFF"/>-->
-    <color id="pythontest/circle in"  rgba="0x8080FF00"/>
-    <color id="pythontest/circle out" rgba="0xFFFFFF00"/>
-    <color id="pythontest/line"       rgba="0xFFFF4000"/>
+    <color id="pythontest/circle in"  rgba="0x8080FFFF"/>
+    <color id="pythontest/circle out" rgba="0xFFFFFFFF"/>
+    <color id="pythontest/line"       rgba="0xFFFF40FF"/>
 
-    <color id="erase/rectangle in"    rgba="0x6090FF00"/>
-    <color id="erase/rectangle out"   rgba="0X1ECECE00"/>
+    <color id="erase/rectangle in"    rgba="0x507cc9CC"/>
+    <color id="erase/rectangle out"   rgba="0X1ECECEFF"/>
+    <color id="erase/rectangle in2"   rgba="0x8bb0f999"/>
+    <color id="erase/rectangle out2"  rgba="0X0E0E0EFF"/>
+    <color id="erase/rectangle in3"   rgba="0xc1d4f466"/>
+    <color id="erase/rectangle out3"  rgba="0XFFFFFFFF"/>
   </Skin>
 </GCompris>
 
