@@ -37,7 +37,11 @@
     <!-- <color id="canal_lock/ground color"       rgba="0x9b5f5aFF"/>-->
 
     <color id="erase/rectangle in"    rgba="0xE0B0F000"/>
-    <color id="erase/rectangle out"   rgba="0X6030A000"/>
+    <color id="erase/rectangle out"   rgba="0Xef64d300"/>
+    <color id="erase/rectangle in2"   rgba="0xeccff799"/>
+    <color id="erase/rectangle out2"  rgba="0X0E0E0EFF"/>
+    <color id="erase/rectangle in3"   rgba="0xf7e3f666"/>
+    <color id="erase/rectangle out3"  rgba="0XFFFFFFFF"/>
 
   </Skin>
 </GCompris>
