@@ -6,4 +6,4 @@
 Makefile
 Makefile.in
 gcompris
-gcompris-edit
+gcompris_edit
